--- a/transposenote.css
+++ b/transposenote.css
@@ -7,7 +7,7 @@
   body {
     /* background-color: #03ba9e;
      */
-    background: url("../flute.jpg");
+    background: url("flute.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -23,7 +23,7 @@
     background-color: #fff;
     border: none;
     border-radius: 20px;
-    box-shadow: 0px 30px 55px 2px rgba(0, 0, 0, 0.46);
+    box-shadow: 0px 30px 55px 2px rgba(22, 22, 29, 0.46);
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -33,10 +33,10 @@
   .title {
     width: 100%;
     height: 25%;
-    background: url("../headphone.jpg");
+    background: url("headphone.jpg");
     background-size: cover;
     background-position: right;
-    color: white;
+    color: #aaa;
     display: flex;
     justify-content: center;
     align-items: center;
