--- a/transposenote.css
+++ b/transposenote.css
@@ -17,122 +17,250 @@
     font-family: 'Poppins', sans-serif;
   }
 
-  .containerd {
-    width: 500px;
-    height: 600px;
-    background-color: #fff;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 0px 30px 55px 2px rgba(22, 22, 29, 0.46);
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    cursor: default;
+  @media screen and (max-width:520px) {
+
+    .containerd {
+      width: 500px;
+      height: 600px;
+      background-color: rgba(222, 222, 222, .5);
+      border: none;
+      border-radius: 20px;
+      box-shadow: 0px 30px 55px 2px rgba(22, 22, 29, 0.46);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      cursor: default;
+    }
+
+    .title {
+      width: 100%;
+      height: 25%;
+      background: url("headphone.jpg");
+      background-size: cover;
+      background-position: right;
+      color: #aaa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .addSect {
+      width: 100%;
+      height: 15%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+      border-bottom: 1px solid #dbdbdb;
+    }
+
+    .taskInput {
+      margin: 10px 0 10px 10px;
+      padding: 10px;
+      width: 180px;
+      height: 40px;
+      border-radius: 15px 0 0 15px;
+      border: 1px solid #dbdbdb;
+      border-right: none;
+      outline: none;
+    }
+
+
+    .add {
+      width: 65px;
+      height: 40px;
+      margin: 5px 5px 5px 0;
+      padding: 5px 5px 5px 0;
+      background-color: #f7b71d;
+      color: white;
+      border: none;
+      outline: none;
+      border-radius: 0 15px 15px 0;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: .8rem;
+      text-transform: capitalize;
+      transition: all 0.2s ease-in-out;
+    }
+
+    .add:hover {
+      box-shadow: 2px 2px 2px 2px gray;
+      background-color: #ffa600;
+    }
+
+    .list {
+      width: 100%;
+      height: 70%;
+      padding: 0 10px 10px 10px;
+      overflow: auto;
+    }
+
+
+    /* dom element */
+    .taskContainer {
+      border-bottom: 1px solid #dbdbdb;
+      padding: 5px 0 5px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .task {
+      width: 170px;
+    }
+
+
+    i.fas.fa-check,
+    i.fas.fa.trash-alt {
+      opacity: 0;
+      cursor: pointer;
+      transition: all .1s ease-in-out;
+    }
+
+    i.fas.fa-check:hover {
+      color: #0c9463;
+
+    }
+
+    i.fas.fa-trash-alt:hover {
+      color: #ff0000;
+    }
+
+    i.fas.fa-check:active {
+      transform: translateY(3px);
+    }
+
+    i.fas.fa-trash-alt:active {
+      transform: translateY(3px);
+    }
+
+    .taskContainer:hover i.fas.fa-check,
+    .taskContainer:hover i.fas.fa-trash-alt {
+      opacity: 1;
+    }
+
   }
 
-  .title {
-    width: 100%;
-    height: 25%;
-    background: url("headphone.jpg");
-    background-size: cover;
-    background-position: right;
-    color: #aaa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  @media screen and (min-width:1024px) {
 
-  .addSect {
-    width: 100%;
-    height: 15%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    .containerd {
+      width: 500px;
+      height: 600px;
+      background-color: #fff;
+      border: none;
+      border-radius: 20px;
+      box-shadow: 0px 30px 55px 2px rgba(22, 22, 29, 0.46);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      cursor: default;
+    }
 
-    border-bottom: 1px solid #dbdbdb;
-  }
+    .title {
+      width: 100%;
+      height: 25%;
+      background: url("headphone.jpg");
+      background-size: cover;
+      background-position: right;
+      color: #aaa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-  .taskInput {
-    margin: 10px 0 10px 10px;
-    padding: 10px;
-    width: 180px;
-    height: 40px;
-    border-radius: 15px 0 0 15px;
-    border: 1px solid #dbdbdb;
-    border-right: none;
-    outline: none;
-  }
+    .addSect {
+      width: 100%;
+      height: 15%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
 
+      border-bottom: 1px solid #dbdbdb;
+    }
 
-  .add {
-    width: 65px;
-    height: 40px;
-    margin: 5px 5px 5px 0;
-    padding: 5px 5px 5px 0;
-    background-color: #f7b71d;
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 0 15px 15px 0;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: .8rem;
-    text-transform: capitalize;
-    transition: all 0.2s ease-in-out;
-  }
-
-  .add:hover {
-    box-shadow: 2px 2px 2px 2px gray;
-    background-color: #ffa600;
-  }
-
-  .list {
-    width: 100%;
-    height: 70%;
-    padding: 0 10px 10px 10px;
-    overflow: auto;
-  }
+    .taskInput {
+      margin: 10px 0 10px 10px;
+      padding: 10px;
+      width: 180px;
+      height: 40px;
+      border-radius: 15px 0 0 15px;
+      border: 1px solid #dbdbdb;
+      border-right: none;
+      outline: none;
+    }
 
 
-  /* dom element */
-  .taskContainer {
-    border-bottom: 1px solid #dbdbdb;
-    padding: 5px 0 5px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    .add {
+      width: 65px;
+      height: 40px;
+      margin: 5px 5px 5px 0;
+      padding: 5px 5px 5px 0;
+      background-color: #f7b71d;
+      color: white;
+      border: none;
+      outline: none;
+      border-radius: 0 15px 15px 0;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: .8rem;
+      text-transform: capitalize;
+      transition: all 0.2s ease-in-out;
+    }
 
-  .task {
-    width: 170px;
-  }
+    .add:hover {
+      box-shadow: 2px 2px 2px 2px gray;
+      background-color: #ffa600;
+    }
+
+    .list {
+      width: 100%;
+      height: 70%;
+      padding: 0 10px 10px 10px;
+      overflow: auto;
+    }
 
 
-  i.fas.fa-check,
-  i.fas.fa.trash-alt {
-    opacity: 0;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
-  }
+    /* dom element */
+    .taskContainer {
+      border-bottom: 1px solid #dbdbdb;
+      padding: 5px 0 5px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-  i.fas.fa-check:hover {
-    color: #0c9463;
+    .task {
+      width: 170px;
+    }
 
-  }
 
-  i.fas.fa-trash-alt:hover {
-    color: #ff0000;
-  }
+    i.fas.fa-check,
+    i.fas.fa.trash-alt {
+      opacity: 0;
+      cursor: pointer;
+      transition: all .1s ease-in-out;
+    }
 
-  i.fas.fa-check:active {
-    transform: translateY(3px);
-  }
+    i.fas.fa-check:hover {
+      color: #0c9463;
 
-  i.fas.fa-trash-alt:active {
-    transform: translateY(3px);
-  }
+    }
 
-  .taskContainer:hover i.fas.fa-check,
-  .taskContainer:hover i.fas.fa-trash-alt {
-    opacity: 1;
+    i.fas.fa-trash-alt:hover {
+      color: #ff0000;
+    }
+
+    i.fas.fa-check:active {
+      transform: translateY(3px);
+    }
+
+    i.fas.fa-trash-alt:active {
+      transform: translateY(3px);
+    }
+
+    .taskContainer:hover i.fas.fa-check,
+    .taskContainer:hover i.fas.fa-trash-alt {
+      opacity: 1;
+    }
+
   }
