--- a/transposenote.css
+++ b/transposenote.css
@@ -13,8 +13,15 @@
     height: 100vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+  }
+
+  #staffnotation {
+    background: white;
+    height: 100vh;
+    weight: 100%;
   }
 
   @media screen and (max-width:520px) {
@@ -142,9 +149,8 @@
   }
 
   @media screen and (min-width:1024px) {
-
     .containerd {
-      width: 500px;
+      width: 700px;
       height: 600px;
       background-color: #fff;
       border: none;
