--- a/transposenote.css
+++ b/transposenote.css
@@ -27,7 +27,7 @@
   @media screen and (max-width:520px) {
 
     .containerd {
-      width: 500px;
+      width: 400px;
       height: 600px;
       background-color: rgba(222, 222, 222, .5);
       border: none;
@@ -146,6 +146,93 @@
       opacity: 1;
     }
 
+
+    .toggle {
+      position: absolute;
+      top: 1.5rem;
+      left: 1.5rem;
+      cursor: pointer;
+      transition: left .5s ease, font 1s ease;
+    }
+
+    .toggle i {
+      width: 3.5rem;
+      z-index: 2;
+      color: #a82acb;
+    }
+
+    .menu {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 40vw;
+      height: 100vh;
+      background-color: #8f928f80;
+      transform: translateX(-101%);
+      will-change: transform;
+      transform: all .2s ease-in;
+      color: black
+    }
+
+    .menu.open {
+      transform: translateX(0%);
+    }
+
+    .menu.open+.toggle {
+      left: 5rem;
+      font-size: 2rem;
+    }
+
+    .menu-v {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 10vh;
+      /* background-color: #8f928f80; */
+      transform: translateX(-101%);
+      will-change: transform;
+      transform: all .2s ease-in;
+    }
+
+    .menu-v.open {
+      transform: translateX(0%);
+    }
+
+    .home {
+      min-height: 100vh;
+      width: 100%;
+      padding: 8rem;
+
+    }
+
+
+    .select ul {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      overflow: scroll;
+      margin-top: 60px;
+      padding: 2px 0;
+    }
+
+    .select ul li {
+      width: 100%;
+      height: 40px;
+      font-size: 1rem;
+      text-transform: capitalize;
+      margin: 5px 5px;
+      cursor: pointer;
+    }
+
+    .select ul li:hover {
+      box-shadow: 1px 1px 5px gray;
+      background: rgba(255, 0, 0, 0.11);
+    }
+
+    .select ul::-webkit-scrollbar {
+      background: transparent;
+    }
   }
 
   @media screen and (min-width:1024px) {
@@ -269,4 +356,90 @@
       opacity: 1;
     }
 
+    .toggle {
+      position: absolute;
+      top: 2.5rem;
+      left: 2.5rem;
+      cursor: pointer;
+      transition: left .5s ease, font 1s ease;
+    }
+
+    .toggle i {
+      width: 3.5rem;
+      z-index: 2;
+      color: #a82acb;
+    }
+
+    .menu {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 20vw;
+      height: 100vh;
+      /* background-color: #8f928f80; */
+      transform: translateX(-101%);
+      will-change: transform;
+      transform: all .2s ease-in;
+      color: black
+    }
+
+    .menu.open {
+      transform: translateX(0%);
+    }
+
+    .menu.open+.toggle {
+      left: 8rem;
+      font-size: 2rem;
+    }
+
+    .menu-v {
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      height: 10vh;
+      /* background-color: #8f928f80; */
+      transform: translateX(-101%);
+      will-change: transform;
+      transform: all .2s ease-in;
+    }
+
+    .menu-v.open {
+      transform: translateX(0%);
+    }
+
+    .home {
+      min-height: 100vh;
+      width: 100%;
+      padding: 8rem;
+
+    }
+
+
+    .select ul {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      overflow: scroll;
+      margin-top: 80px;
+      padding: 2px 0;
+    }
+
+    .select ul li {
+      width: 100%;
+      height: 40px;
+      font-size: 1.5rem;
+      text-transform: capitalize;
+      margin: 5px 5px;
+      cursor: pointer;
+    }
+
+    .select ul li:hover {
+      box-shadow: 1px 1px 5px gray;
+      background: rgba(255, 0, 0, 0.11);
+    }
+
+    .select ul::-webkit-scrollbar {
+      background: transparent;
+    }
   }
