--- a/transposenote.css
+++ b/transposenote.css
@@ -8,7 +8,7 @@
     /* background-color: #03ba9e;
      */
     background: url("flute.jpg");
-    background-size: cover;
+    background-size:auto;
     background-position: center;
     height: 100vh;
     display: flex;
@@ -54,6 +54,9 @@
   }
   .posRR{
     bottom:80px;
+  }
+  .posRRR{
+    bottom:120px;
   }
   .d-flex{
     display:flex;
@@ -134,6 +137,8 @@
       height: 70%;
       padding: 0 10px 10px 10px;
       overflow: auto;
+      background: url("flute.png") ;
+
     }
 
 
@@ -350,6 +355,7 @@
       height: 70%;
       padding: 0 10px 10px 10px;
       overflow: auto;
+      background: url("flute.png") ;
     }
 
 
@@ -492,7 +498,7 @@
 
   @media screen and (min-width:1024px) {
     .containerd {
-      width: 700px;
+      width: 900px;
       height: 600px;
       background-color: #fff;
       border: none;
@@ -565,6 +571,9 @@
       height: 70%;
       padding: 0 10px 10px 10px;
       overflow: auto;
+      background: url("flute.png");
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
 
